# TPMS2STEP

./: CMakeLists.txt  README.md  TPMS_D.cpp  TPMS_D.h  TPMS_G.cpp  TPMS_G.h  TPMS_P.cpp  TPMS_P.h  TPMS_Solid.cpp  TPMS_Solid.h  main.cpp  piaCuda.cu  piaCuda.h  pythonEXEC.cpp  pythonEXEC.h  quadMesh.cpp  quadMesh.h  sample.cpp  sample.h
Utils/MarchingCube/: MC33_LookUpTable.h
data/SFP/Diamond/: SFP_Diamond_offset_-10.off  SFP_Diamond_offset_0.off  SFP_Diamond_offset_10.off
data/SFP/Gyroid/: SFP_Gyroid_offset_-10.off  SFP_Gyroid_offset_0.off  SFP_Gyroid_offset_10.off
data/SFP/SchwarzP/: SFP_SchwarzP_offset_-10.off  SFP_SchwarzP_offset_0.off  SFP_SchwarzP_offset_10.off
data/uv/: sampleParams.txt  uv_Diamond.off  uv_Gyroid.off  uv_Gyroid_pia.off  uv_SchwarzP_pia.off
python/: generateSFP_Diamond.py  generateSFP_Gyroid.py  generateSFP_SchwarzP.py  utility.py
